<resources>
    <string name="app_name">Emplearte</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gestion">GESTIÓN DE EMPLEADOS</string>
    <string name="Nombre">NOMBRES</string>
    <string name="Apellidos">APELLIDOS:</string>
    <string name="Direccion">DIRECCIÓN:</string>
    <string name="Telefono">TELÉFONO</string>
    <string name="Email">EMAIL</string>
    <string name="Nombres">NOMBRE Y APELLIDOS:</string>
    <string name="TipoDoc">TIPO DE DOCUMENTO:</string>
    <string name="Documento">DOCUMENTO:</string>
    <string name="area">AREA:</string>
    <string name="Subarea">SUBAREA:</string>
    <string-array name="TiposDoc">
        <item>CC</item>
        <item>CE</item>
        <item>PE</item>

    </string-array>
</resources>